@@ -4,10 +4,13 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import org.apache.commons.lang3.StringUtils;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.autoconfigure.jackson.JacksonAutoConfiguration;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.Spy;
+import org.mockito.junit.jupiter.MockitoExtension;
+import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
+import com.fasterxml.jackson.databind.SerializationFeature;
 import uk.gov.hmcts.reform.ccd.client.model.AboutToStartOrSubmitCallbackResponse;
 import uk.gov.hmcts.reform.ccd.client.model.CallbackRequest;
 import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
@@ -51,7 +54,6 @@ import uk.gov.hmcts.reform.civil.ga.service.DocUploadDashboardNotificationServic
 import uk.gov.hmcts.reform.civil.ga.service.GaForLipService;
 import uk.gov.hmcts.reform.civil.ga.service.GeneralAppLocationRefDataService;
 import uk.gov.hmcts.reform.civil.ga.service.ParentCaseUpdateHelper;
-import uk.gov.hmcts.reform.civil.utils.AssignCategoryId;
 import uk.gov.hmcts.reform.civil.utils.ElementUtils;
 import uk.gov.hmcts.reform.idam.client.IdamClient;
 import uk.gov.hmcts.reform.idam.client.models.UserInfo;
@@ -85,50 +87,41 @@ import static uk.gov.hmcts.reform.civil.model.common.DynamicList.fromList;
 import static uk.gov.hmcts.reform.civil.utils.ElementUtils.element;
 import static uk.gov.hmcts.reform.civil.utils.ElementUtils.wrapElements;
 
-@SuppressWarnings({"checkstyle:EmptyLineSeparator", "checkstyle:Indentation"})
-@SpringBootTest(classes = {
-    CaseDetailsConverter.class,
-    RespondToApplicationHandler.class,
-    JacksonAutoConfiguration.class,
-    AssignCategoryId.class
-},
-    properties = {"reference.database.enabled=false"})
+@ExtendWith(MockitoExtension.class)
 public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallbackHandlerTest {
 
-    @Autowired
+    @Spy
+    private ObjectMapper objectMapper = new ObjectMapper()
+        .registerModule(new JavaTimeModule())
+        .disable(SerializationFeature.WRITE_DATES_AS_TIMESTAMPS);
+
+    @Mock
+    private CaseDetailsConverter caseDetailsConverter;
+
+    @InjectMocks
     RespondToApplicationHandler handler;
 
-    @Autowired
-    ObjectMapper objectMapper;
-
-    @MockBean
-    CaseDetailsConverter caseDetailsConverter;
-
-    @MockBean
+    @Mock
     private FeatureToggleService featureToggleService;
-    @MockBean
+    @Mock
     private DocUploadDashboardNotificationService dashboardNotificationService;
-    @MockBean
+    @Mock
     IdamClient idamClient;
-    @MockBean
+    @Mock
     GaForLipService gaForLipService;
-    @MockBean
+    @Mock
     ParentCaseUpdateHelper parentCaseUpdateHelper;
 
-    @MockBean
+    @Mock
     private CoreCaseDataService coreCaseDataService;
 
-    @MockBean
+    @Mock
     protected GeneralAppLocationRefDataService locationRefDataService;
+
     List<Element<Document>> documents = new ArrayList<>();
+
     @BeforeEach
-        public void setUp() throws IOException {
-
-        when(idamClient.getUserInfo(anyString())).thenReturn(UserInfo.builder()
-                                                                 .sub(DUMMY_EMAIL)
-                                                                 .uid(DEF_UID)
-                                                                 .build());
-
+    public void setUp() throws IOException {
         Document document = Document.builder().documentUrl("url").documentFileName("file").build();
         documents.add(ElementUtils.element(document));
     }
@@ -204,8 +197,6 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
     @Test
     void buildResponseConfirmationReturnsCorrectMessageWhenGaHasLipAndVaryJudgeApppLRvLR() {
         when(gaForLipService.isGaForLip(any())).thenReturn(false);
-        when(gaForLipService.isLipApp(any())).thenReturn(false);
-        when(gaForLipService.isLipResp(any())).thenReturn(false);
         CallbackParams params = callbackParamsOf(getVaryCase(APPLICATION_SUBMITTED_AWAITING_JUDICIAL_DECISION),
                                                  CallbackType.SUBMITTED);
         var response = (SubmittedCallbackResponse) handler.handle(params);
@@ -218,8 +209,6 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
     void buildResponseConfirmationReturnsCorrectMessageWhenWelshFlagEnabledAndApplicantBilingual() {
         when(featureToggleService.isGaForWelshEnabled()).thenReturn(true);
         when(gaForLipService.isGaForLip(any())).thenReturn(true);
-        when(gaForLipService.isLipApp(any())).thenReturn(true);
-        when(gaForLipService.isLipResp(any())).thenReturn(false);
         GeneralApplicationCaseData casedata = getVaryCase(APPLICATION_SUBMITTED_AWAITING_JUDICIAL_DECISION).toBuilder()
             .isGaApplicantLip(YES).applicantBilingualLanguagePreference(YES).build();
 
@@ -228,18 +217,22 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
         verifyNoInteractions(dashboardNotificationService);
 
         assertThat(response).isNotNull();
+        assertThat(response.getConfirmationHeader()).isEqualTo("# You have provided the requested information");
     }
 
     @Test
     void buildResponseConfirmationReturnsCorrectMessageWhenWelshFlagEnabledAndApplicantNotBilingual() {
         when(featureToggleService.isGaForWelshEnabled()).thenReturn(true);
-        GeneralApplicationCaseData casedata = getVaryCase(APPLICATION_SUBMITTED_AWAITING_JUDICIAL_DECISION).toBuilder().build();
+        when(gaForLipService.isGaForLip(any())).thenReturn(true);
+        GeneralApplicationCaseData casedata = getVaryCase(APPLICATION_SUBMITTED_AWAITING_JUDICIAL_DECISION).toBuilder()
+            .isGaApplicantLip(YES).applicantBilingualLanguagePreference(NO).build();
 
         CallbackParams params = callbackParamsOf(casedata, CallbackType.SUBMITTED);
         var response = (SubmittedCallbackResponse) handler.handle(params);
         verifyNoInteractions(dashboardNotificationService);
 
         assertThat(response).isNotNull();
+        assertThat(response.getConfirmationHeader()).isEqualTo("# You have provided the requested information");
     }
 
     @Test
@@ -343,8 +336,11 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
         assertThat(response).isNotNull();
         assertThat(response.getErrors()).isEqualTo(errors);
     }
+
     @Test
     void aboutToStartCallbackChecksRespondendResponseBeforeProceeding() {
+
+        mockIdamClient(DEF_UID);
 
         List<LocationRefData> locations = new ArrayList<>();
         locations.add(LocationRefData.builder().siteName("siteName").courtAddress("court Address").postcode("post code")
@@ -370,6 +366,8 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
 
     @Test
     void aboutToStartCallbackChecksRespondendResponseBeforeProceeding_VaryJudgement() {
+
+        mockIdamClient(DEF_UID);
 
         List<LocationRefData> locations = new ArrayList<>();
         locations.add(LocationRefData.builder().siteName("siteName").courtAddress("court Address").postcode("post code")
@@ -431,11 +429,10 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
         CallbackParams params = callbackParamsOf(updateCaseData.build(),
                                                  CallbackType.MID, "validate-debtor-offer");
 
-
         var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
 
         assertThat(response.getErrors()).isNotNull();
-        assertThat(response.getErrors().get(0)).isEqualTo(PAYMENT_DATE_CANNOT_BE_IN_PAST);
+        assertThat(response.getErrors().getFirst()).isEqualTo(PAYMENT_DATE_CANNOT_BE_IN_PAST);
     }
 
     @Test
@@ -452,7 +449,6 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
 
         CallbackParams params = callbackParamsOf(updateCaseData.build(),
                                                  CallbackType.MID, "validate-debtor-offer");
-
 
         var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
 
@@ -600,6 +596,7 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
 
     @Test
     void shouldReturn_Awaiting_Respondent_Response_1Def_2Responses() {
+        mockIdamClient(DEF_UID);
 
         List<Element<GASolicitorDetailsGAspec>> respondentSols = new ArrayList<>();
 
@@ -622,7 +619,6 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
 
         // GA CaseData
         CaseDetails ga = CaseDetails.builder().id(456L).build();
-        when(coreCaseDataService.getCase(456L)).thenReturn(ga);
         when(caseDetailsConverter.toGeneralApplicationCaseData(ga))
             .thenReturn(caseData);
 
@@ -634,14 +630,15 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
         assertThat(response).isNotNull();
         GeneralApplicationCaseData responseCaseData = getResponseCaseData(response);
         assertThat(responseCaseData.getRespondentsResponses()).hasSize(1);
-        assertThat(responseCaseData.getRespondentsResponses().get(0).getValue().getGaHearingDetails()
+        assertThat(responseCaseData.getRespondentsResponses().getFirst().getValue().getGaHearingDetails()
                        .getHearingPreferredLocation().getListItems()).hasSize(1);
-        assertThat(responseCaseData.getRespondentsResponses().get(0).getValue().getGaHearingDetails()
+        assertThat(responseCaseData.getRespondentsResponses().getFirst().getValue().getGaHearingDetails()
                        .getRespondentResponsePartyName()).isEqualTo("Defendant One - Defendant");
     }
 
     @Test
     void shouldReturn_Application_Submitted_Awaiting_Judicial_Decision_2Def_2Responses() {
+        mockIdamClient(DEF_UID);
 
         List<Element<GASolicitorDetailsGAspec>> respondentSols = new ArrayList<>();
 
@@ -667,7 +664,6 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
 
         // GA CaseData
         CaseDetails ga = CaseDetails.builder().id(456L).build();
-        when(coreCaseDataService.getCase(456L)).thenReturn(ga);
         when(caseDetailsConverter.toGeneralApplicationCaseData(ga))
             .thenReturn(caseData);
 
@@ -691,6 +687,7 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
 
     @Test
     void shouldReturn_Application_Submitted_Awaiting_Judicial_Decision_1Def_1Response() {
+        mockIdamClient(DEF_UID);
 
         List<Element<GASolicitorDetailsGAspec>> respondentSols = new ArrayList<>();
 
@@ -699,8 +696,6 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
 
         respondentSols.add(element(respondent1));
 
-        GeneralApplicationCaseData caseData = getCase(respondentSols, respondentsResponses);
-
         // Civil Claim CaseDate
         CaseDetails civil = CaseDetails.builder().id(123L).build();
         when(coreCaseDataService.getCase(123L)).thenReturn(civil);
@@ -708,8 +703,8 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
             .thenReturn(getCivilCaseData(DUMMY_EMAIL, DUMMY_EMAIL, DUMMY_EMAIL));
 
         // GA CaseData
+        GeneralApplicationCaseData caseData = getCase(respondentSols, respondentsResponses);
         CaseDetails ga = CaseDetails.builder().id(456L).build();
-        when(coreCaseDataService.getCase(456L)).thenReturn(ga);
         when(caseDetailsConverter.toGeneralApplicationCaseData(ga))
             .thenReturn(caseData);
 
@@ -722,6 +717,7 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
 
     @Test
     void shouldReturn_Application_Submitted_Awaiting_Judicial_Decision_1Def_1ResponseLip() {
+        mockIdamClient(DEF_UID);
 
         List<Element<GASolicitorDetailsGAspec>> respondentSols = new ArrayList<>();
 
@@ -729,9 +725,6 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
             .email(DUMMY_EMAIL).organisationIdentifier("org2").build();
 
         respondentSols.add(element(respondent1));
-
-        GeneralApplicationCaseData caseData = getCase(respondentSols, respondentsResponses);
-        GeneralApplicationCaseData updatedCaseData = caseData.toBuilder().parentClaimantIsApplicant(NO).build();
 
         // Civil Claim CaseDate
         CaseDetails civil = CaseDetails.builder().id(123L).build();
@@ -744,9 +737,11 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
                             .respondentSolicitor1EmailAddress(DUMMY_EMAIL)
                             .build());
         when(gaForLipService.isLipResp(any())).thenReturn(true);
+
         // GA CaseData
+        GeneralApplicationCaseData caseData = getCase(respondentSols, respondentsResponses);
+        GeneralApplicationCaseData updatedCaseData = caseData.toBuilder().parentClaimantIsApplicant(NO).build();
         CaseDetails ga = CaseDetails.builder().id(456L).build();
-        when(coreCaseDataService.getCase(456L)).thenReturn(ga);
         when(caseDetailsConverter.toGeneralApplicationCaseData(ga))
             .thenReturn(updatedCaseData);
 
@@ -771,6 +766,8 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
         GeneralApplicationCaseData.GeneralApplicationCaseDataBuilder<?, ?> caseDataBuilder = caseData.toBuilder();
         caseDataBuilder.isMultiParty(YES);
 
+        mockIdamClient(DEF_UID);
+
         // Civil Claim Case Data
         CaseDetails civil = CaseDetails.builder().id(123L).build();
         when(coreCaseDataService.getCase(123L)).thenReturn(civil);
@@ -779,7 +776,6 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
 
         // GA Case Data
         CaseDetails ga = CaseDetails.builder().id(456L).build();
-        when(coreCaseDataService.getCase(456L)).thenReturn(ga);
         when(caseDetailsConverter.toGeneralApplicationCaseData(ga))
             .thenReturn(caseDataBuilder.build());
 
@@ -791,12 +787,14 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
 
         assertThat(response).isNotNull();
         assertThat(responseData.getRespondentsResponses()
-                       .get(0).getValue().getGaHearingDetails().getRespondentResponsePartyName())
+                       .getFirst().getValue().getGaHearingDetails().getRespondentResponsePartyName())
             .isEqualTo("Defendant Two - Defendant");
     }
 
     @Test
     void shouldReturn_Awaiting_Respondent_Response_2Def_1Response() {
+
+        mockIdamClient(DEF_UID);
 
         // Civil Claim Case Data
         CaseDetails civil = CaseDetails.builder().id(123L).build();
@@ -819,7 +817,6 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
 
         // GA Case Data
         CaseDetails ga = CaseDetails.builder().id(456L).build();
-        when(coreCaseDataService.getCase(456L)).thenReturn(ga);
         when(caseDetailsConverter.toGeneralApplicationCaseData(ga))
             .thenReturn(caseData);
 
@@ -837,6 +834,7 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
 
     @Test
     void shouldReturn_Awaiting_Respondent_Response_For_NoDef_NoResponse() {
+        mockIdamClient(DEF_UID);
 
         // Civil Claim Case Data
         CaseDetails civil = CaseDetails.builder().id(123L).build();
@@ -848,7 +846,6 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
 
         // GA Case Data
         CaseDetails ga = CaseDetails.builder().id(456L).build();
-        when(coreCaseDataService.getCase(456L)).thenReturn(ga);
         when(caseDetailsConverter.toGeneralApplicationCaseData(ga))
             .thenReturn(caseData);
 
@@ -868,6 +865,8 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
         caseDataBuilder.parentClaimantIsApplicant(NO)
             .generalAppType(GAApplicationType.builder().types(List.of(SUMMARY_JUDGEMENT)).build()).build();
 
+        mockIdamClient(DEF_UID);
+
         // Civil Claim CaseDate
         CaseDetails civil = CaseDetails.builder().id(123L).build();
         when(coreCaseDataService.getCase(123L)).thenReturn(civil);
@@ -876,7 +875,6 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
 
         // GA CaseData
         CaseDetails ga = CaseDetails.builder().id(456L).build();
-        when(coreCaseDataService.getCase(456L)).thenReturn(ga);
         when(caseDetailsConverter.toGeneralApplicationCaseData(ga))
             .thenReturn(caseDataBuilder.build());
 
@@ -889,7 +887,7 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
         assertThat(response).isNotNull();
         assertThat(responseCaseData.getHearingDetailsResp()).isNull();
         assertThat(responseCaseData.getRespondentsResponses()
-                       .get(0).getValue().getGaHearingDetails()
+                       .getFirst().getValue().getGaHearingDetails()
                        .getRespondentResponsePartyName()).isEqualTo("Claimant One - Claimant");
     }
 
@@ -904,6 +902,8 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
                                                .hearingPreferencesPreferredType(GAHearingType.VIDEO).build());
         caseDataBuilder.isGaRespondentOneLip(YES);
 
+        mockIdamClient(DEF_UID);
+
         // Civil Claim CaseDate
         CaseDetails civil = CaseDetails.builder().id(123L).build();
         when(coreCaseDataService.getCase(123L)).thenReturn(civil);
@@ -912,7 +912,6 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
 
         // GA CaseData
         CaseDetails ga = CaseDetails.builder().id(456L).build();
-        when(coreCaseDataService.getCase(456L)).thenReturn(ga);
         when(caseDetailsConverter.toGeneralApplicationCaseData(ga))
             .thenReturn(caseDataBuilder.build());
 
@@ -925,12 +924,14 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
         assertThat(response).isNotNull();
         assertThat(responseCaseData.getHearingDetailsResp()).isNull();
         assertThat(responseCaseData.getRespondentsResponses()
-                       .get(0).getValue().getGaHearingDetails()
+                       .getFirst().getValue().getGaHearingDetails()
                        .getHearingPreferredLocation().getValue().getLabel()).isEqualTo("ABCD - RG0 0AL");
     }
 
     @Test
     void shouldReturn_No_WhenRespondIsNotAcceptedByRespondent() {
+
+        mockIdamClient(DEF_UID);
 
         // Civil Claim Case Data
         CaseDetails civil = CaseDetails.builder().id(123L).build();
@@ -952,10 +953,8 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
                                                      .generalAppRespondent1Representative(NO).build())
             .generalAppRespondDocument(documents);
 
-
         // GA Case Data
         CaseDetails ga = CaseDetails.builder().id(456L).build();
-        when(coreCaseDataService.getCase(456L)).thenReturn(ga);
         when(caseDetailsConverter.toGeneralApplicationCaseData(ga))
             .thenReturn(caseDataBuilder.build());
 
@@ -967,9 +966,9 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
         GeneralApplicationCaseData responseCaseData = objectMapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
 
         assertThat(response).isNotNull();
-        assertThat(responseCaseData.getRespondentsResponses().get(0).getValue()
+        assertThat(responseCaseData.getRespondentsResponses().getFirst().getValue()
                 .getGeneralAppRespondent1Representative()).isEqualTo(NO);
-        assertThat(responseCaseData.getRespondentsResponses().get(0)
+        assertThat(responseCaseData.getRespondentsResponses().getFirst()
                 .getValue().getGaRespondentResponseReason()).isEqualTo("reason");
         assertThat(responseCaseData.getGeneralAppRespondDocument()).isNull();
         assertThat(responseCaseData.getGeneralAppRespondReason()).isNull();
@@ -977,17 +976,14 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
         assertThat(responseCaseData.getGaAddlDoc().size()).isEqualTo(1);
         assertThat(responseCaseData.getGaAddlDocStaff().size()).isEqualTo(1);
         assertThat(responseCaseData.getGaAddlDocRespondentSol().size()).isEqualTo(1);
-        assertThat(responseCaseData.getGaAddlDoc().get(0).getValue().getDocumentName()).isEqualTo("Respond evidence");
-        assertThat(responseCaseData.getGaAddlDoc().get(0).getValue().getCreatedBy()).isEqualTo("Respondent One");
-        assertThat(responseCaseData.getGaAddlDoc().get(0).getValue().getDocumentLink().getCategoryID()).isEqualTo("applications");
+        assertThat(responseCaseData.getGaAddlDoc().getFirst().getValue().getDocumentName()).isEqualTo("Respond evidence");
+        assertThat(responseCaseData.getGaAddlDoc().getFirst().getValue().getCreatedBy()).isEqualTo("Respondent One");
+        assertThat(responseCaseData.getGaAddlDoc().getFirst().getValue().getDocumentLink().getCategoryID()).isEqualTo("applications");
     }
 
     @Test
     void shouldReturn_No_WhenRespondIsNotAcceptedByRespondentTWO() {
-        when(idamClient.getUserInfo(anyString())).thenReturn(UserInfo.builder()
-                .sub(DUMMY_EMAIL)
-                .uid(DEF2_UID)
-                .build());
+        mockIdamClient(DEF2_UID);
         // Civil Claim Case Data
         CaseDetails civil = CaseDetails.builder().id(123L).build();
         when(coreCaseDataService.getCase(123L)).thenReturn(civil);
@@ -1008,10 +1004,8 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
                         .generalAppRespondent1Representative(NO).build())
                 .generalAppRespondDocument(documents);
 
-
         // GA Case Data
         CaseDetails ga = CaseDetails.builder().id(456L).build();
-        when(coreCaseDataService.getCase(456L)).thenReturn(ga);
         when(caseDetailsConverter.toGeneralApplicationCaseData(ga))
                 .thenReturn(caseDataBuilder.build());
 
@@ -1023,9 +1017,9 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
         GeneralApplicationCaseData responseCaseData = objectMapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
 
         assertThat(response).isNotNull();
-        assertThat(responseCaseData.getRespondentsResponses().get(0).getValue()
+        assertThat(responseCaseData.getRespondentsResponses().getFirst().getValue()
                 .getGeneralAppRespondent1Representative()).isEqualTo(NO);
-        assertThat(responseCaseData.getRespondentsResponses().get(0)
+        assertThat(responseCaseData.getRespondentsResponses().getFirst()
                 .getValue().getGaRespondentResponseReason()).isEqualTo("reason");
         assertThat(responseCaseData.getGeneralAppRespondDocument()).isNull();
         assertThat(responseCaseData.getGeneralAppRespondReason()).isNull();
@@ -1033,9 +1027,9 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
         assertThat(responseCaseData.getGaAddlDoc().size()).isEqualTo(1);
         assertThat(responseCaseData.getGaAddlDocStaff().size()).isEqualTo(1);
         assertThat(responseCaseData.getGaAddlDocRespondentSolTwo().size()).isEqualTo(1);
-        assertThat(responseCaseData.getGaAddlDoc().get(0).getValue().getDocumentName()).isEqualTo("Respond evidence");
-        assertThat(responseCaseData.getGaAddlDoc().get(0).getValue().getCreatedBy()).isEqualTo("Respondent Two");
-        assertThat(responseCaseData.getGaAddlDoc().get(0).getValue().getDocumentLink().getCategoryID()).isEqualTo("applications");
+        assertThat(responseCaseData.getGaAddlDoc().getFirst().getValue().getDocumentName()).isEqualTo("Respond evidence");
+        assertThat(responseCaseData.getGaAddlDoc().getFirst().getValue().getCreatedBy()).isEqualTo("Respondent Two");
+        assertThat(responseCaseData.getGaAddlDoc().getFirst().getValue().getDocumentLink().getCategoryID()).isEqualTo("applications");
     }
 
     @Test
@@ -1049,14 +1043,14 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
                 .gaRespondentConsent(NO)
                 .generalAppRespondConsentDocument(documents);
 
+        mockIdamClient(DEF_UID);
+
         // GA CaseData
         CaseDetails ga = CaseDetails.builder().id(456L).build();
-        when(coreCaseDataService.getCase(456L)).thenReturn(ga);
         when(caseDetailsConverter.toGeneralApplicationCaseData(ga))
             .thenReturn(caseDataBuilder.build());
 
         CallbackParams params = callbackParamsOf(caseDataBuilder.build(), CallbackType.ABOUT_TO_SUBMIT);
-
 
         // Civil Claim CaseDate
         CaseDetails civil = CaseDetails.builder().id(123L).build();
@@ -1070,9 +1064,9 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
 
         GeneralApplicationCaseData responseCaseData = objectMapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
         assertThat(response).isNotNull();
-        assertThat(responseCaseData.getRespondentsResponses().get(0).getValue()
+        assertThat(responseCaseData.getRespondentsResponses().getFirst().getValue()
                 .getGeneralAppRespondent1Representative()).isEqualTo(NO);
-        assertThat(responseCaseData.getRespondentsResponses().get(0)
+        assertThat(responseCaseData.getRespondentsResponses().getFirst()
                 .getValue().getGaRespondentResponseReason()).isEqualTo("reason");
         assertThat(responseCaseData.getGeneralAppRespondConsentDocument()).isNull();
         assertThat(responseCaseData.getGeneralAppRespondConsentReason()).isNull();
@@ -1097,6 +1091,8 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
                 .paymentSetDate(planDate).build())
             .generalAppRespondDebtorDocument(documents);
 
+        mockIdamClient(DEF_UID);
+
         // Civil Claim CaseDate
         CaseDetails civil = CaseDetails.builder().id(123L).build();
         when(coreCaseDataService.getCase(123L)).thenReturn(civil);
@@ -1105,7 +1101,6 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
 
         // GA CaseData
         CaseDetails ga = CaseDetails.builder().id(456L).build();
-        when(coreCaseDataService.getCase(456L)).thenReturn(ga);
         when(caseDetailsConverter.toGeneralApplicationCaseData(ga))
             .thenReturn(caseDataBuilder.build());
 
@@ -1120,9 +1115,9 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
         GeneralApplicationCaseData responseCaseData = objectMapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
         assertThat(response).isNotNull();
         assertThat(responseCaseData.getHearingDetailsResp()).isNull();
-        assertThat(responseCaseData.getRespondentsResponses().get(0).getValue()
+        assertThat(responseCaseData.getRespondentsResponses().getFirst().getValue()
                        .getGeneralAppRespondent1Representative()).isEqualTo(NO);
-        assertThat(responseCaseData.getRespondentsResponses().get(0).getValue()
+        assertThat(responseCaseData.getRespondentsResponses().getFirst().getValue()
                 .getGaRespondentResponseReason()).isEqualTo(expectedReason);
         assertThat(responseCaseData.getGeneralAppRespondDebtorDocument()).isNull();
         assertThat(responseCaseData.getGaAddlDoc().size()).isEqualTo(1);
@@ -1149,9 +1144,10 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
                     .monthlyInstalment(new BigDecimal(1234)).build())
             .generalAppRespondDebtorDocument(documents);
 
+        mockIdamClient(DEF_UID);
+
         // GA CaseData
         CaseDetails ga = CaseDetails.builder().id(456L).build();
-        when(coreCaseDataService.getCase(456L)).thenReturn(ga);
         when(caseDetailsConverter.toGeneralApplicationCaseData(ga))
             .thenReturn(caseDataBuilder.build());
 
@@ -1169,7 +1165,7 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
         callbackParamsBuilder.request(CallbackRequest.builder().caseDetails(ga).build());
         var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(callbackParamsBuilder.build());
         GeneralApplicationCaseData responseCaseData = objectMapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
-        assertThat(responseCaseData.getRespondentsResponses().get(0).getValue()
+        assertThat(responseCaseData.getRespondentsResponses().getFirst().getValue()
                 .getGaRespondentResponseReason()).isEqualTo(expectedReason);
     }
 
@@ -1184,7 +1180,7 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
                         GARespondentDebtorOfferOptionsGAspec.ACCEPT)
                     .paymentPlan(GADebtorPaymentPlanGAspec.PAYFULL).build());
 
-        CallbackParams params = callbackParamsOf(caseDataBuilder.build(), CallbackType.ABOUT_TO_SUBMIT);
+        mockIdamClient(DEF_UID);
 
         // Civil Claim Case Data
         CaseDetails civil = CaseDetails.builder().id(123L).build();
@@ -1194,10 +1190,10 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
 
         // GA Case Data
         CaseDetails ga = CaseDetails.builder().id(456L).build();
-        when(coreCaseDataService.getCase(456L)).thenReturn(ga);
         when(caseDetailsConverter.toGeneralApplicationCaseData(ga))
             .thenReturn(caseDataBuilder.build());
 
+        CallbackParams params = callbackParamsOf(caseDataBuilder.build(), CallbackType.ABOUT_TO_SUBMIT);
         CallbackParams.CallbackParamsBuilder callbackParamsBuilder = params.toBuilder();
         callbackParamsBuilder.request(CallbackRequest.builder().caseDetails(ga).build());
         var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(callbackParamsBuilder.build());
@@ -1205,12 +1201,13 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
         GeneralApplicationCaseData responseCaseData = objectMapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
         assertThat(response).isNotNull();
         assertThat(responseCaseData.getHearingDetailsResp()).isNull();
-        assertThat(responseCaseData.getRespondentsResponses().get(0).getValue()
+        assertThat(responseCaseData.getRespondentsResponses().getFirst().getValue()
                        .getGeneralAppRespondent1Representative()).isEqualTo(YES);
     }
 
     @Test
     void shouldReturn_Null_RespondentResponseAfterAddingToCollections() {
+        mockIdamClient(DEF_UID);
 
         List<Element<GASolicitorDetailsGAspec>> respondentSols = new ArrayList<>();
 
@@ -1219,17 +1216,10 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
 
         respondentSols.add(element(respondent1));
 
-        GeneralApplicationCaseData caseData = getCase(respondentSols, respondentsResponses);
         DynamicList dynamicListTest = fromList(getSampleCourLocations());
         Optional<DynamicListElement> first = dynamicListTest.getListItems().stream().findFirst();
         first.ifPresent(dynamicListTest::setValue);
 
-        GeneralApplicationCaseData updatedCaseData = caseData.toBuilder().hearingDetailsResp(GAHearingDetails.builder()
-                                                                               .hearingPreferredLocation(
-                                                                                   dynamicListTest)
-                                                                               .hearingPreferencesPreferredType(
-                                                                                   GAHearingType.IN_PERSON)
-                                                                               .build()).build();
         // Civil Claim Case Data
         CaseDetails civil = CaseDetails.builder().id(123L).build();
         when(coreCaseDataService.getCase(123L)).thenReturn(civil);
@@ -1237,8 +1227,13 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
             .thenReturn(getCivilCaseData(DUMMY_EMAIL, DUMMY_EMAIL, DUMMY_EMAIL));
 
         // GA Case Data
+        GeneralApplicationCaseData caseData = getCase(respondentSols, respondentsResponses);
+        GeneralApplicationCaseData updatedCaseData = caseData.toBuilder()
+            .hearingDetailsResp(GAHearingDetails.builder()
+                                    .hearingPreferredLocation(dynamicListTest)
+                                    .hearingPreferencesPreferredType(GAHearingType.IN_PERSON)
+                                    .build()).build();
         CaseDetails ga = CaseDetails.builder().id(456L).build();
-        when(coreCaseDataService.getCase(456L)).thenReturn(ga);
         when(caseDetailsConverter.toGeneralApplicationCaseData(ga))
             .thenReturn(updatedCaseData);
 
@@ -1252,6 +1247,13 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
         assertThat(responseCaseData.getGeneralAppRespondent1Representative()
                        .getGeneralAppRespondent1Representative()).isNull();
         assertThat(responseCaseData.getRespondentsResponses()).hasSize(1);
+    }
+
+    private void mockIdamClient(String defUid) {
+        when(idamClient.getUserInfo(anyString())).thenReturn(UserInfo.builder()
+                                                                 .sub(DUMMY_EMAIL)
+                                                                 .uid(defUid)
+                                                                 .build());
     }
 
     private GeneralApplicationCaseData getResponseCaseData(AboutToStartOrSubmitCallbackResponse response) {
